// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Product Satellite config should apply graph configuration: filters 1`] = `
{
  "groupedFiltersSettings": {
    "settings": {
      "isStandalone": false,
      "metric": undefined,
      "metrics": [
        {
          "chartType": "area",
          "color": "#06c",
          "fill": "#8bc1f7",
          "id": "Sockets_physical",
          "isCapacity": false,
          "isStacked": true,
          "isStandalone": false,
          "isThreshold": false,
          "isToolbarFilter": true,
          "metric": "Sockets",
          "query": {
            "category": "physical",
          },
          "stroke": "#06c",
          "strokeWidth": 2,
        },
        {
          "chartType": "area",
          "color": "#009596",
          "fill": "#a2d9d9",
          "id": "Sockets_virtual",
          "isCapacity": false,
          "isStacked": true,
          "isStandalone": false,
          "isThreshold": false,
          "isToolbarFilter": true,
          "metric": "Sockets",
          "query": {
            "category": "virtual",
          },
          "stroke": "#009596",
          "strokeWidth": 2,
        },
        {
          "chartType": "area",
          "color": "#5752d1",
          "fill": "#b2b0ea",
          "id": "Sockets_cloud",
          "isCapacity": false,
          "isStacked": true,
          "isStandalone": false,
          "isThreshold": false,
          "isToolbarFilter": true,
          "metric": "Sockets",
          "query": {
            "category": "cloud",
          },
          "stroke": "#5752d1",
          "strokeWidth": 2,
        },
      ],
    },
  },
  "standaloneFiltersSettings": [],
}
`;

exports[`Product Satellite config should apply graph configuration: settings 1`] = `
{
  "actions": [
    {
      "id": "granularity",
      "position": "right",
    },
  ],
  "isDisabledLegendClick": true,
}
`;

exports[`Product Satellite config should apply guest inventory configuration: filtered 1`] = `
{
  "cells": [
    {
      "title": "lorem",
    },
    {
      "title": "lorem inventory id",
    },
    {
      "title": <DateFormat
        date="2022-01-01T00:00:00.000Z"
      />,
    },
  ],
  "columnHeaders": [
    {
      "title": "t(curiosity-inventory.header, {"context":"guestsDisplayName"})",
      "transforms": [],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"inventoryId"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"lastSeen"})",
      "transforms": [
        [Function],
      ],
    },
  ],
  "data": {
    "displayName": {
      "title": "t(curiosity-inventory.header, {"context":"displayName"})",
      "value": "lorem",
    },
    "inventoryId": {
      "title": "t(curiosity-inventory.header, {"context":"inventoryId"})",
      "value": "lorem inventory id",
    },
    "lastSeen": {
      "title": "t(curiosity-inventory.header, {"context":"lastSeen"})",
      "value": "2022-01-01T00:00:00.000Z",
    },
    "loremIpsum": {
      "title": "t(curiosity-inventory.header, {"context":"loremIpsum"})",
      "value": "hello world",
    },
    "subscriptionManagerId": {
      "title": "t(curiosity-inventory.header, {"context":"subscriptionManagerId"})",
      "value": "lorem subscription id",
    },
  },
}
`;

exports[`Product Satellite config should apply guest inventory configuration: filtered, authorized 1`] = `
{
  "cells": [
    {
      "title": <Button
        component="a"
        href="/insights/inventory/lorem inventory id/"
        isInline={true}
        variant="link"
      >
        lorem
      </Button>,
    },
    {
      "title": "lorem inventory id",
    },
    {
      "title": <DateFormat
        date="2022-01-01T00:00:00.000Z"
      />,
    },
  ],
  "columnHeaders": [
    {
      "title": "t(curiosity-inventory.header, {"context":"guestsDisplayName"})",
      "transforms": [],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"inventoryId"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"lastSeen"})",
      "transforms": [
        [Function],
      ],
    },
  ],
  "data": {
    "displayName": {
      "title": "t(curiosity-inventory.header, {"context":"displayName"})",
      "value": "lorem",
    },
    "inventoryId": {
      "title": "t(curiosity-inventory.header, {"context":"inventoryId"})",
      "value": "lorem inventory id",
    },
    "lastSeen": {
      "title": "t(curiosity-inventory.header, {"context":"lastSeen"})",
      "value": "2022-01-01T00:00:00.000Z",
    },
    "loremIpsum": {
      "title": "t(curiosity-inventory.header, {"context":"loremIpsum"})",
      "value": "hello world",
    },
    "subscriptionManagerId": {
      "title": "t(curiosity-inventory.header, {"context":"subscriptionManagerId"})",
      "value": "lorem subscription id",
    },
  },
}
`;

exports[`Product Satellite config should apply guest inventory configuration: filtered, missing inventory id 1`] = `
{
  "cells": [
    {
      "title": "lorem",
    },
    {
      "title": "",
    },
    {
      "title": <DateFormat
        date="2022-01-01T00:00:00.000Z"
      />,
    },
  ],
  "columnHeaders": [
    {
      "title": "t(curiosity-inventory.header, {"context":"guestsDisplayName"})",
      "transforms": [],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"inventoryId"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"lastSeen"})",
      "transforms": [
        [Function],
      ],
    },
  ],
  "data": {
    "displayName": {
      "title": "t(curiosity-inventory.header, {"context":"displayName"})",
      "value": "lorem",
    },
    "inventoryId": {
      "title": "t(curiosity-inventory.header, {"context":"inventoryId"})",
      "value": "",
    },
    "lastSeen": {
      "title": "t(curiosity-inventory.header, {"context":"lastSeen"})",
      "value": "2022-01-01T00:00:00.000Z",
    },
    "loremIpsum": {
      "title": "t(curiosity-inventory.header, {"context":"loremIpsum"})",
      "value": "hello world",
    },
    "subscriptionManagerId": {
      "title": "t(curiosity-inventory.header, {"context":"subscriptionManagerId"})",
      "value": "lorem subscription id",
    },
  },
}
`;

exports[`Product Satellite config should apply hosts inventory configuration: filtered 1`] = `
{
  "cells": [
    {
      "title": "lorem",
    },
    {
      "title": <React.Fragment>
        t(curiosity-inventory.measurementType, {"context":null})
         
        
      </React.Fragment>,
    },
    {
      "title": 10,
    },
    {
      "title": <DateFormat
        date="2022-01-01T00:00:00.000Z"
      />,
    },
  ],
  "columnHeaders": [
    {
      "title": "t(curiosity-inventory.header_display_name, {"context":"Satellite"})",
      "transforms": [],
    },
    {
      "title": "t(curiosity-inventory.header_measurement_type, {"context":"Satellite"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header_sockets, {"context":"Satellite"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header_last_seen, {"context":"Satellite"})",
      "transforms": [
        [Function],
      ],
    },
  ],
  "data": {
    "cores": {
      "title": "t(curiosity-inventory.header_cores, {"context":"Satellite"})",
      "value": 12,
    },
    "display_name": {
      "title": "t(curiosity-inventory.header_display_name, {"context":"Satellite"})",
      "value": "lorem",
    },
    "hardware_type": {
      "title": "t(curiosity-inventory.header_hardware_type, {"context":"Satellite"})",
      "value": "ipsum",
    },
    "inventory_id": {
      "title": "t(curiosity-inventory.header_inventory_id, {"context":"Satellite"})",
      "value": "",
    },
    "last_seen": {
      "title": "t(curiosity-inventory.header_last_seen, {"context":"Satellite"})",
      "value": "2022-01-01T00:00:00.000Z",
    },
    "loremIpsum": {
      "title": "t(curiosity-inventory.header_loremIpsum, {"context":"Satellite"})",
      "value": "hello world",
    },
    "measurement_type": {
      "title": "t(curiosity-inventory.header_measurement_type, {"context":"Satellite"})",
      "value": null,
    },
    "number_of_guests": {
      "title": "t(curiosity-inventory.header_number_of_guests, {"context":"Satellite"})",
      "value": 3,
    },
    "sockets": {
      "title": "t(curiosity-inventory.header_sockets, {"context":"Satellite"})",
      "value": 10,
    },
  },
}
`;

exports[`Product Satellite config should apply hosts inventory configuration: filtered, authorized 1`] = `
{
  "cells": [
    {
      "title": <React.Fragment>
        <Button
          component="a"
          href="/insights/inventory/XXXX-XXXX-XXXXX-XXXXX/"
          isInline={true}
          variant="link"
        >
          lorem
        </Button>
         
        t(curiosity-inventory.label, {"context":"numberOfGuests","count":3}, [object Object])
      </React.Fragment>,
    },
    {
      "title": <React.Fragment>
        t(curiosity-inventory.measurementType, {"context":null})
         
        
      </React.Fragment>,
    },
    {
      "title": 10,
    },
    {
      "title": <DateFormat
        date="2022-01-01T00:00:00.000Z"
      />,
    },
  ],
  "columnHeaders": [
    {
      "title": "t(curiosity-inventory.header_display, {"context":"name"})",
      "transforms": [],
    },
    {
      "title": "t(curiosity-inventory.header_measurement, {"context":"type"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"sockets"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header_last, {"context":"seen"})",
      "transforms": [
        [Function],
      ],
    },
  ],
  "data": {
    "cores": {
      "title": "t(curiosity-inventory.header, {"context":"cores"})",
      "value": 12,
    },
    "display_name": {
      "title": "t(curiosity-inventory.header_display, {"context":"name"})",
      "value": "lorem",
    },
    "hardware_type": {
      "title": "t(curiosity-inventory.header_hardware, {"context":"type"})",
      "value": "ipsum",
    },
    "inventory_id": {
      "title": "t(curiosity-inventory.header_inventory, {"context":"id"})",
      "value": "XXXX-XXXX-XXXXX-XXXXX",
    },
    "last_seen": {
      "title": "t(curiosity-inventory.header_last, {"context":"seen"})",
      "value": "2022-01-01T00:00:00.000Z",
    },
    "loremIpsum": {
      "title": "t(curiosity-inventory.header, {"context":"loremIpsum"})",
      "value": "hello world",
    },
    "measurement_type": {
      "title": "t(curiosity-inventory.header_measurement, {"context":"type"})",
      "value": null,
    },
    "number_of_guests": {
      "title": "t(curiosity-inventory.header_number_of, {"context":"guests"})",
      "value": 3,
    },
    "sockets": {
      "title": "t(curiosity-inventory.header, {"context":"sockets"})",
      "value": 10,
    },
  },
}
`;

exports[`Product Satellite config should apply hosts inventory configuration: filtered, authorized 1`] = `
{
  "cells": [
    {
      "title": <React.Fragment>
        <Button
          component="a"
          href="/insights/inventory/XXXX-XXXX-XXXXX-XXXXX/"
          isInline={true}
          variant="link"
        >
          lorem
        </Button>
         
        t(curiosity-inventory.label, {"context":"numberOfGuests","count":3}, [object Object])
      </React.Fragment>,
    },
    {
      "title": <React.Fragment>
        t(curiosity-inventory.measurementType, {"context":null})
         
        
      </React.Fragment>,
    },
    {
      "title": 10,
    },
    {
      "title": <DateFormat
        date="2022-01-01T00:00:00.000Z"
      />,
    },
  ],
  "columnHeaders": [
    {
      "title": "t(curiosity-inventory.header_display, {"context":"name"})",
      "transforms": [],
    },
    {
      "title": "t(curiosity-inventory.header_measurement, {"context":"type"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"sockets"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header_last, {"context":"seen"})",
      "transforms": [
        [Function],
      ],
    },
  ],
  "data": {
    "cores": {
      "title": "t(curiosity-inventory.header, {"context":"cores"})",
      "value": 12,
    },
    "display_name": {
      "title": "t(curiosity-inventory.header_display, {"context":"name"})",
      "value": "lorem",
    },
    "hardware_type": {
      "title": "t(curiosity-inventory.header_hardware, {"context":"type"})",
      "value": "ipsum",
    },
    "inventory_id": {
      "title": "t(curiosity-inventory.header_inventory, {"context":"id"})",
      "value": "XXXX-XXXX-XXXXX-XXXXX",
    },
    "last_seen": {
      "title": "t(curiosity-inventory.header_last, {"context":"seen"})",
      "value": "2022-01-01T00:00:00.000Z",
    },
    "loremIpsum": {
      "title": "t(curiosity-inventory.header, {"context":"loremIpsum"})",
      "value": "hello world",
    },
    "measurement_type": {
      "title": "t(curiosity-inventory.header_measurement, {"context":"type"})",
      "value": null,
    },
    "number_of_guests": {
      "title": "t(curiosity-inventory.header_number_of, {"context":"guests"})",
      "value": 3,
    },
    "sockets": {
      "title": "t(curiosity-inventory.header, {"context":"sockets"})",
      "value": 10,
    },
  },
}
`;

exports[`Product Satellite config should apply hosts inventory configuration: filtered, fallback display 1`] = `
{
  "cells": [
    {
      "title": "lorem",
    },
    {
      "title": <React.Fragment>
        t(curiosity-inventory.measurementType, {"context":null})
         
        <Label
          color="purple"
        >
          t(curiosity-inventory.cloudProvider, {"context":"dolor sit"})
        </Label>
      </React.Fragment>,
    },
    {
      "title": 10,
    },
    {
      "title": "",
    },
  ],
  "columnHeaders": [
    {
      "title": "t(curiosity-inventory.header_display_name, {"context":"Satellite"})",
      "transforms": [],
    },
    {
      "title": "t(curiosity-inventory.header_measurement_type, {"context":"Satellite"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header_sockets, {"context":"Satellite"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header_last_seen, {"context":"Satellite"})",
      "transforms": [
        [Function],
      ],
    },
  ],
  "data": {
    "cloud_provider": {
      "title": "t(curiosity-inventory.header_cloud_provider, {"context":"Satellite"})",
      "value": "dolor sit",
    },
    "cores": {
      "title": "t(curiosity-inventory.header_cores, {"context":"Satellite"})",
      "value": 12,
    },
    "display_name": {
      "title": "t(curiosity-inventory.header_display_name, {"context":"Satellite"})",
      "value": "lorem",
    },
    "hardware_type": {
      "title": "t(curiosity-inventory.header_hardware_type, {"context":"Satellite"})",
      "value": "ipsum",
    },
    "inventory_id": {
      "title": "t(curiosity-inventory.header_inventory_id, {"context":"Satellite"})",
      "value": null,
    },
    "last_seen": {
      "title": "t(curiosity-inventory.header_last_seen, {"context":"Satellite"})",
      "value": null,
    },
    "loremIpsum": {
      "title": "t(curiosity-inventory.header_loremIpsum, {"context":"Satellite"})",
      "value": "hello world",
    },
    "measurement_type": {
      "title": "t(curiosity-inventory.header_measurement_type, {"context":"Satellite"})",
      "value": null,
    },
    "number_of_guests": {
      "title": "t(curiosity-inventory.header_number_of_guests, {"context":"Satellite"})",
      "value": 3,
    },
    "sockets": {
      "title": "t(curiosity-inventory.header_sockets, {"context":"Satellite"})",
      "value": 10,
    },
  },
}
`;
